Segundo día avanzando con fuerza. Thanks Yud

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -15,7 +15,7 @@
         <h4>Tarea de HTML/CSS</h4>
   </div>
   <div class="divClass">
-        <span id="spanId">Mi comida favorita es el lomo saltado de las claudias XD</span>
+        <span id="spanId">Mi comida favorita es el lomo saltado de Las Claudias XD</span>
         <a href="https://es.wikipedia.org/wiki/Lomo_saltado">Ir a enlace</a>
   </div>
   <div id="thirdDiv"> 
