--- a/08-HTML/homework/demo.html
+++ b/08-HTML/homework/demo.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title> Tarea de HTML/CSS de Criss </title>
-        <link rel="stylesheet" href="styles.css">
+        <title> Tarea de HTML/CSS de Crisius </title>
+        <link rel="stylesheet" href="demo.css">
     </head>
         <body>
             <div class="divClass">
-                <h1> Cristian </h1>
+                <h1> Crisius Maximus </h1>
                 <h2> Henry </h2>
                 <h4> Tarea de HTML/CSS </h4>
             </div>
 
             <div class="divClass">
-                <span id="spanId"> My favorite food is Lomo Saltado </span>
+                <span id="spanId"> My favorite food is Pastaaa </span>
                 <a href="https://www.facebook.com/2CLAUDIAS/"> Visitar página </a>
             </div>
 
