--- a/08-HTML/homework/CV.html
+++ b/08-HTML/homework/CV.html
@@ -17,14 +17,17 @@
                 <div>
                     <p> 24 años </p>
                     <h2> REPARTIDOR DE COMIDA RÁPIDA </h2>
-                    <span>
-                        <i> Llevo 5 años trabajando en distintos rubros como:
-                        Carpintería metálica.
-                        Panadería (Supermercado WONG).
-                        Repartidor de comida rápida (KFC).
-                        Adquieriendo experiencia en el trabajo en equipo y en la atención al cliente. 
-                        </i>
-                    </span>
+                    <div id="tex">
+                        <span>
+                            <i> Llevo 5 años trabajando en distintos rubros como:
+                            Carpintería metálica.
+                            Panadería (Supermercado WONG).
+                            Repartidor de comida rápida (KFC).
+                            Adquieriendo experiencia en el trabajo en equipo y en la atención al cliente. 
+                            </i>
+                        </span>
+                    </div>
+                    
                 </div>
                 
             </div>
